# pk-config

./: README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
pk_config/: config.py  requirements.py
src/pk_config/: __init__.py  config.py  exceptions.py  registry.py  requirements.py
src/pk_config/config/: __init__.py  config.py  exceptions.py
src/pk_config/patterns/: __init__.py  cycler.py  factories.py  observer.py  patterns.py
src/pk_config/registry/: __init__.py  exceptions.py  registry.py
src/pk_config/ui/: __init__.py  dialogs.py
tests/: test_pk_config.py
