[metadata]
name = pk-config
description = Configuration management for python projects
long_description = file: README.md
license = file: LICENSE
url = https://github.com/tulare/pk-config
author = Tulare Regnus
author_email = tulare.paxgalactica@gmail.com

[bdist_wheel]
universal = True

[options]
install_requires =
	pathlib; python_version <= '2.7'
zip_safe = False
include_package_data = True
packages = find:
test_suite = nose.collector
tests_require = 
	nose

[options.packages.find]
where = src

[options.package_data]
	
[options.data_files]